--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,23 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://use.fontawesome.com/5023c048b0.js"></script>
-
   <script src="local-weather.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="local-weather.css">
+  <link rel="stylesheet" type="text/css" href="css/local-weather.css">
+  <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css">
 
-  <title>Show The Local Weather
-  </title>
+  <title>Show The Local Weather</title>
   </head>
 
   <body>
-
   <div class="wrapper">
     <div class="content-area">
-    <span id="weatherTemp"></span> <span onclick="switchTemp()" id="symbol"><img src="assets\svg\celsius.svg" height="50px" width="25px"> </span>
-    <div id="weatherMain"></div>
+    <span id="weatherTemp"></span> <span id="symbol"><i class="wi wi-celsius"></i></span>
     <div id="icon"></div>
+    <div id="weatherMain"></div>
     <span id="city"></span>, <span id="country"></span>
     </div> <!-- content-area -->
   </div> <!-- wrapper -->
